gitlab/k8s/kubectl/pgadmin/20-pgadmin-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pgadmin
  namespace: gitlab
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin-gitlab
    # app.kubernetes.io/version: "10.4"
    app.kubernetes.io/component: db-frontend
    app.kubernetes.io/part-of: gitlab
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
        app.kubernetes.io/instance: pgadmin-gitlab
        # app.kubernetes.io/version: "10.4"
        app.kubernetes.io/component: db-frontend
        app.kubernetes.io/part-of: gitlab
    spec:
      containers:
      - image: dpage/pgadmin4
        name: pgadmin
        # env:
        #   - name: PGADMIN_DEFAULT_EMAIL
        #     value: "admin@admin.com"
        #   - name: PGADMIN_PORT
        #     value: "80"
        #   - name: PGADMIN_DEFAULT_PASSWORD
        #     value: "admin123"
          # - name: PGADMIN_DEFAULT_PASSWORD
          #   valueFrom:
          #     secretKeyRef:
          #       name: pgsql-root-password
          #       key: PGADMIN_DEFAULT_PASSWORD
        ports:
          - containerPort: 80
            name: pgadminport
