gitlab/k8s/kubectl/pgadmin/40-pgadmin-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pgadmin
  namespace: gitlab
  # selfLink: >-
  #   /apis/extensions/v1beta1/namespaces/kubernetes-dashboard/ingresses/k8s-dashboard
  # uid: de46c64c-2258-4873-8a46-b4c05535ebc5
  # resourceVersion: '6306'
  # generation: 1
  # creationTimestamp: '2020-12-09T23:59:13Z'
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin-gitlab
    # app.kubernetes.io/version: "10.4"
    app.kubernetes.io/component: db-frontend
    app.kubernetes.io/part-of: gitlab
  annotations:
    # kubectl.kubernetes.io/last-applied-configuration: >
    #   {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/backend-protocol":"HTTPS"},"labels":{"app":"kubernetes-dashboard"},"name":"k8s-dashboard","namespace":"kubernetes-dashboard"},"spec":{"rules":[{"host":"k8s-console.${VM_NAME}.localdomain","http":{"paths":[{"backend":{"serviceName":"kubernetes-dashboard","servicePort":443},"path":"/"}]}}],"tls":[{"hosts":["k8s-console.${VM_NAME}.localdomain"],"s [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  # tls:
  #   - hosts:
  #       - mavenrepo.${VM_NAME}.localdomain
      # secretName: kubernetes-dashboard-certs
  type: LoadBalancer
  rules:
    - host: pgadmin.gitlab.dev.localdomain
      http:
        paths:
          - path: /
            backend:
              serviceName: pgadmin
              servicePort: 80
#     - host: gitlab-pgadmin.${VM_NAME}.localdomain
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: pgadmin
#               servicePort: 80
# status:
#   loadBalancer:
#     ingress:
#       - ip: 192.168.1.141
#       - ip: 192.168.1.90
